[gd_scene load_steps=3 format=3 uid="uid://cj6vr2x8nucgv"]

[ext_resource type="Script" path="res://scripts/defender.gd" id="1_rqm4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 200.0

[node name="Defender" type="Node2D"]
script = ExtResource("1_rqm4w")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0, 0, 1, 1)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_1")

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]